Replace Images with img in files

--- a/events.html
+++ b/events.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-          <img src="Images/logo.png" alt="Logo" width="90px"> 
+          <img src="img/logo.png" alt="Logo" width="90px"> 
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -72,14 +72,14 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Mrs. Rita Rajan</strong> <em>B.A. B.Ed</em></p>
                     <p>Director, an educationalist with 25 years of experience</p>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Dr. Rajan Zacharia</strong></p>
                     <p>Director</p>
                 </div>
@@ -88,21 +88,21 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
                     <p>Director</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Staff-2</strong></p>
                     <p>Director</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Staff-3</strong></p>
                     <p>Director</p>
                 </div>
@@ -111,21 +111,21 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Staff-1</strong> <em>B.A. B.Ed</em></p>
                     <p>Director</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Staff-2</strong></p>
                     <p>Director</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Staff-3</strong></p>
                     <p>Director</p>
                 </div>
