--- a/facilities.html
+++ b/facilities.html
@@ -41,7 +41,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-          <img src="Images/logo.png" alt="Logo" width="90px"> 
+          <img src="img/logo.png" alt="Logo" width="90px"> 
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
