--- a/staff.html
+++ b/staff.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-          <img src="Images/logo.png" alt="Logo" width="90px"> 
+          <img src="img/logo.png" alt="Logo" width="90px"> 
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -62,14 +62,14 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Mrs. Rita Rajan</strong></p>
                     <p>Director</p>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Director">
+                    <img src="img/bandmember.jpg" alt="Director">
                     <p><strong>Dr. Rajan Zacharia</strong></p>
                     <p>Director</p>
                 </div>
@@ -78,21 +78,21 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <img src="img/bandmember.jpg" alt="Educator">
                     <p><strong>Mrs. Mary Abraham</strong></p>
                     <p>Educator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <img src="img/bandmember.jpg" alt="Educator">
                     <p><strong>Mrs. Tanushree Saha</strong></p>
                     <p>Educator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <img src="img/bandmember.jpg" alt="Educator">
                     <p><strong>Mrs. Raji Ajith</strong></p>
                     <p>Educator</p>
                 </div>
@@ -101,21 +101,21 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Educator">
+                    <img src="img/bandmember.jpg" alt="Educator">
                     <p><strong>TBD</strong></p>
                     <p>Educator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Facilitator">
+                    <img src="img/bandmember.jpg" alt="Facilitator">
                     <p><strong>Mrs. Shyni Mathew</strong></p>
                     <p>Facilitator</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="Images/bandmember.jpg" alt="Facilitator">
+                    <img src="img/bandmember.jpg" alt="Facilitator">
                     <p><strong>Valsa</strong></p>
                     <p>Facilitator</p>
                 </div>
