--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-          <img src="Images/logo.png" alt="Logo" width="90px"> 
+          <img src="img/logo.png" alt="Logo" width="90px"> 
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -67,21 +67,21 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="Images/girl.jpg" alt="Girl" width="1200" height="700">
+        <img src="img/girl.jpg" alt="Girl" width="1200" height="700">
         <!--<div class="carousel-caption">
           <h3>New York</h3>
         </div>-->      
       </div>
 
       <div class="item">
-        <img src="Images/boy.jpg" alt="Boy" width="1200" height="700">
+        <img src="img/boy.jpg" alt="Boy" width="1200" height="700">
         <!--<div class="carousel-caption">
           <h3>Chicago</h3>
         </div>-->      
       </div>
       
       <div class="item">
-        <img src="Images/girl.jpg" alt="Random" width="1200" height="700">
+        <img src="img/girl.jpg" alt="Random" width="1200" height="700">
         <!--<div class="carousel-caption">
           <h3>Chicago</h3>
         </div>-->      
