Testing gallery using embed social

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,12 @@
     </div>
     </div>
     </nav>
-
+<div class="container text-centre">
+    <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="//embedsocial.com/facebook_album/album_photos/234981536702309" scrolling="no"></iframe>
+    </div>
+    </div>
+    
     <footer>
         <div class="copyright">&copy; Nature Kids Kochi</div>
         <div class="social">
