prettyPhoto for gallery

--- a/staff.html
+++ b/staff.html
@@ -19,6 +19,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/5293e337f8.js"></script>
+    <style>
+        .container{
+            background-color: white;
+            border-radius: 25px;
+        }
+    </style>
 
 </head>
 
@@ -54,11 +60,15 @@
     </div>
     </div>
     </nav>
+    
+    <br>
 
     <div class="container text-center">
         <h3>THE EDUCATORS</h3>
         <p class="text-justify">We have qualified and dedicated staff continually trained by facilitators locally and via webinars from our early childhood advisor in Australia. Our team is committed to providing your child with an educational and caring environment. We work in partnership with children's parents and the wider community to develop each child’s fullest potential.</p>
-        
+    </div>
+    <br>
+    <div class="container text-center" style="background-color:transparent">
         <div class="row">
             <div class="col-sm-6">
                 <div class="thumbnail">
@@ -116,7 +126,7 @@
             <div class="col-sm-4">
                 <div class="thumbnail">
                     <img src="img/bandmember.jpg" alt="Facilitator">
-                    <p><strong>Valsa</strong></p>
+                    <p><strong>Mrs. Valsa</strong></p>
                     <p>Facilitator</p>
                 </div>
             </div>
