--- a/gallery.html
+++ b/gallery.html
@@ -62,8 +62,8 @@
         <div class="row">
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="img/boy.jpg" alt="">
+                <a class="thumbnail" href="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/13256089_475885372611923_4439449947305741477_n.jpg?oh=d7f91495d8995642e7405a75e7ee424c&oe=57C2CDBC&__gda__=1472490634_c2d04c510ca7c1acc1a593a235ffa334">
+                    <img class="img-responsive" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/13256089_475885372611923_4439449947305741477_n.jpg?oh=d7f91495d8995642e7405a75e7ee424c&oe=57C2CDBC&__gda__=1472490634_c2d04c510ca7c1acc1a593a235ffa334" alt="test">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
