fixed to local files and testing Facebook images integration

--- a/gallery.html
+++ b/gallery.html
@@ -68,13 +68,14 @@
                             <a href="http://41.media.tumblr.com/f37ac708134914c471073e4c0b47328d/tumblr_mrn3dc10Wa1r1thfzo8_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="People walking down stairs" class="col-sm-4"> 
                             <img src="http://41.media.tumblr.com/f37ac708134914c471073e4c0b47328d/tumblr_mrn3dc10Wa1r1thfzo8_1280.jpg" class="img-responsive">
                             </a>
-                            <a href="http://41.media.tumblr.com/838b44224e39c30cd43490deb11b919d/tumblr_mrn3dc10Wa1r1thfzo1_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Man getting wet" class="col-sm-4">
-                            <img src="http://41.media.tumblr.com/838b44224e39c30cd43490deb11b919d/tumblr_mrn3dc10Wa1r1thfzo1_1280.jpg" class="img-responsive">
+                            <a href="img/boy.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Hard working boy" class="col-sm-4">
+                            <img src="img/boy.jpg" class="img-responsive">
                             </a>
-                            <a href="http://41.media.tumblr.com/e06a3513b0b36843f54bee99aeac689a/tumblr_mrn3dc10Wa1r1thfzo2_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="Someone lost their dress" class="col-sm-4">
-                            <img src="http://41.media.tumblr.com/e06a3513b0b36843f54bee99aeac689a/tumblr_mrn3dc10Wa1r1thfzo2_1280.jpg" class="img-responsive">
+                            <a href="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10313364_235290876671375_5849259530120342780_n.jpg?oh=a9aa8c6817b31efb0a279dc88346dd22&oe=57CE9D7D&__gda__=1473570252_661350f483201be23d2df44cdc7d02fe" data-toggle="lightbox" data-gallery="multiimages" data-title="Entrance" class="col-sm-4">
+                            <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10313364_235290876671375_5849259530120342780_n.jpg?oh=a9aa8c6817b31efb0a279dc88346dd22&oe=57CE9D7D&__gda__=1473570252_661350f483201be23d2df44cdc7d02fe" class="img-responsive">
                             </a>
                         </div>
+                        <br>
                         <div class="row">
                             <a href="http://41.media.tumblr.com/9d3e6a9c89a856a2ad0be3ab4ca598b2/tumblr_mrn3dc10Wa1r1thfzo4_1280.jpg" data-toggle="lightbox" data-gallery="multiimages" data-footer="Big waterfall- using footer instead of title" class="col-sm-4">
                             <img src="http://41.media.tumblr.com/9d3e6a9c89a856a2ad0be3ab4ca598b2/tumblr_mrn3dc10Wa1r1thfzo4_1280.jpg" class="img-responsive">
@@ -92,19 +93,8 @@
         </div>
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/4.0.1/ekko-lightbox.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function ($) {
-            // delegate calls to data-toggle="lightbox"
-            $(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
-					event.preventDefault();
-					return $(this).ekkoLightbox({
-						always_show_close: true
-				});
-            });
-        });
-    </script>
-
-    
+    <script src="js/pop.js"></script>
+        
     <footer>
         <div class="copyright">&copy; Nature Kids Kochi</div>
         <div class="social">
