--- a/gallery.html
+++ b/gallery.html
@@ -17,10 +17,17 @@
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" type="text/css" href="css/ks_style.css">
     <link href="//rawgithub.com/ashleydw/lightbox/master/dist/ekko-lightbox.css" rel="stylesheet">
-    <link href="//rawgithub.com/ashleydw/lightbox/css/dark.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/5293e337f8.js"></script>
+    <style>
+        .ekko-lightbox .modal-header {
+            text-align: center;
+        }
+        .ekko-lightbox .modal-footer {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
