--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name="city" content="Kochi">
     <meta name="state" content="Kerala">
     <meta name="country" content="India">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" type="text/css" href="css/ks_style.css">
     <link href="css/thumbnail-gallery.css" rel="stylesheet">
-    <script src="js/jquery.min.jsj"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/5293e337f8.js"></script>
     
